--- a/src/App.css
+++ b/src/App.css
@@ -1,124 +1,38 @@
-
-body {
-  background-color: #fff;
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
+.App {
+  text-align: center;
 }
 
-.container {
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(0, 0, 0, 0.2);
-}
-
-.search-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 90%;
-}
-
-.torre-profile {
-  width: 8rem;
-  height: 8rem;
-  padding-left: 0.5rem;
-}
-
-.card-list {
-  list-style-type: none;
-  width: 90%;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
-.cards-container {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
   align-items: center;
   justify-content: center;
-  align-content: center;
-  margin-right: 2rem;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
-.result-card li {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  height: 12rem;
-  gap: 10%;
-  border-radius: 1rem;
-  background-color: rgba(0, 0, 0, 0.1);
+.App-link {
+  color: #61dafb;
 }
 
-.result-card {
-  border: 1px solid gray;
-  border-radius: 1rem;
-}
-
-.name-container {
-  width: 35%;
-}
-
-.professional-section {
-  width: 20%;
-}
-
-.profile-picture {
-  width: 20%;
-}
-
-.input-box {
-  width: 20%;
-  border-radius: 1rem;
-  padding: 0.5rem;
-}
-
-.favorite-list {
-  list-style-type: none;
-}
-
-.favorite-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding-right: 1.9rem;
-}
-
-.favorite-item {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  gap: 1rem;
-  width: 100%;
-  margin-bottom: 0.5rem;
-}
-
-.add-button,
-.remove-button {
-  color: #333;
-  background-color: #fc0;
-  border-radius: 4px;
-  padding: 10px 20px;
-  cursor: pointer;
-  font-size: 16px;
-  transition: background-color 0.3s;
-}
-
-.add-button:hover,
-.remove-button:hover {
-  background-color: #fc0;
-  color: #333;
-}
-
-.favorite-name {
-  text-decoration: none;
-  color: black;
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
